--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,20 @@
 body{
    /* background-color: #94B49F;*/
 }
+hr{
+    border: dotted #EAF6F6 3px;
+    border-bottom: none;
+    width: 11%;
+    margin:7% auto;
+    color: #789395;
+}
 
 .container-padding{
     padding: 0 7%;
+}
+.membership{
+    padding-bottom: 4%;
+    
 }
 
 
@@ -35,3 +46,37 @@ body{
     padding: 2% 14%;
 }
 
+.img-fluid{
+    width: 400px;
+    height: 330px;
+}
+
+.benefit-text{
+    
+    
+}
+.lockable-img{
+    width: 100%;
+    height: 98%;
+}
+.lockable-suite{
+    margin: 15% auto;
+}
+.suites{
+    position: absolute;
+    top: 300%;
+    left: 33%;
+    font-size: large;
+    font-weight: 200;
+    color: #F0A500;
+        
+}
+
+.our-members{
+    background-color: #789395;
+    padding: 150px 0;
+    line-height: 2;
+}
+.think{
+    padding: 60px 0;
+}
