--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,6 @@
-p {
-  font-family: "Quicksand", sans-serif;
-}
-
 body {
-  margin: 0;
+  background-color: red;
 }
-
 hr {
   border: dotted #eaf6f6 3px;
   border-bottom: none;
@@ -17,7 +12,6 @@ hr {
 .container-padding {
   padding: 0 7%;
 }
-
 .membership {
   padding-bottom: 4%;
 }
@@ -35,7 +29,6 @@ hr {
 .requestbtn:hover {
   color: black;
 }
-
 .co-working {
   position: relative;
   bottom: 400px;
@@ -52,15 +45,15 @@ hr {
   height: 330px;
 }
 
+.benefit-text {
+}
 .lockable-img {
   width: 100%;
   height: 98%;
 }
-
 .lockable-suite {
   margin: 15% auto;
 }
-
 .suites {
   position: absolute;
   top: 300%;
@@ -75,25 +68,11 @@ hr {
   padding: 150px 0;
   line-height: 2;
 }
-
 .think {
   padding: 60px 0;
 }
-
-.about {
-  position: relative;
-  bottom: 280px;
-  font-size: 80px;
-}
-
-.about-tour {
-  margin-left: 45%;
-  font-weight: bold;
-}
-
 @media screen and (max-width: 950px) {
   .suites {
     display: none;
   }
 }
-/*# sourceMappingURL=styles.css.map */
